[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolkitapi"
version = "2.0.0b3"
description = "Official Python SDK for ToolkitAPI.io — 16 toolkits: DNS, DevTools, Email, Scrape, Image, PDF, Screenshot, AI-Text, Barcode, Finance, Media, TextAnalysis, Webhook, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "ToolkitAPI", email = "hello@toolkitapi.io" }]
keywords = [
    "api",
    "sdk",
    "dns",
    "devtools",
    "email",
    "scrape",
    "image",
    "pdf",
    "screenshot",
    "ai",
    "barcode",
    "qr",
    "finance",
    "media",
    "webhook",
    "text-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["httpx>=0.24.0,<1.0.0"]

[project.urls]
Homepage = "https://toolkitapi.io"
Documentation = "https://toolkitapi.io/docs"
Repository = "https://gitlab.com/chrism233-group/toolkit-sites"
Changelog = "https://toolkitapi.io/changelog"

[tool.hatch.build.targets.wheel]
packages = ["src/toolkitapi"]
